--- a/css/about.css
+++ b/css/about.css
@@ -32,6 +32,7 @@
 
 
 
+
 /*
 **----Header Section----**
 */
@@ -88,163 +89,24 @@
 
 
 /*
-**----Section2----**
+**----about-section1----**
 */
-
-.about-section {
-    padding-top: 150px;
-    padding-bottom: 150px;
+.about-section1 {
+	padding: 100px;
     text-align: center;
     background-image: url('../img/about-header.png');
     background-repeat: no-repeat;
     background-size: 100%;
 }
-.home_about-icons4 {
-    padding: 20px 0px;
-}
-.home_about-icons4 .icons-a1 {
-    width: 160px;
-}
-.home_about-icons4 h1 {
-    font-family: 'GrandHotel-Regular';
-}
-.points3 {
-    width: 50px !important;
-}
-.home_about-icons4 p {
-    padding: 10px 10px;
-    font-family: 'GOTHAM-LIGHT';
-}
-.home_about-icons4 button {
-    background: #a5ceee;
-    width: 150px;
-    height: 36px;
-    border-radius: 5px;
-    border: none;
-    color: white;
-}
-.home_about-icons4 button i{
-    padding-left: 10px;
+.about-section1 h1 {
+	font-family: 'GrandHotel-Regular';
+	font-size: 50px;
 }
 
-
-
-
-
-/*
-**----Section3----**
-*/
-
-
-.section3 {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    text-align: center;
-    background-image: url('../img/section3-background.png');
-    background-repeat: no-repeat;
-    -webkit-background-size:cover;
-    -moz-background-size:cover;
-    -o-background-size:cover;
-    background-size:cover;
-    background-position:center;
+.about-section1 p {
+	padding-top: 15px;
+	font-family: 'GOTHAM-LIGHT';
 }
-
-.section3 .section3-body h1{
-    font-family: 'GrandHotel-Regular';
-    color: white;
-    font-size: 50px;
-}
-.section3 .section3-body p{
-    font-family: 'GOTHAM-LIGHT';
-    color: white;
-    padding-top: 30px;
-}
-.section3 .section3-body button{
-    background-color: #85d6df;
-    color: white;
-    border-radius: 5px;
-    border:none;
-    width: 130px;
-    height: 37px;
-    margin-top: 10px;
-    font-family: 'Montserrat';
-}
-
-
-
-
-
-/*
-**----Contact Section----**
-*/
-
-.contact-section {
-    text-align: center;
-    background-color:#85d6df; 
-    padding: 40px 0px;
-}
-
-.contact-section h1 {
-    font-family: 'GrandHotel-Regular';
-    color: white;
-    font-size: 50px;
-}
-
-.contact-section p {
-    font-family: 'GOTHAM-LIGHT';
-    color: white;
-}
-
-.contact-section-email input {
-    width: 100%;
-    padding: 10px 10px;
-    border: solid 1px white;
-    color: white;
-    background-color: transparent;
-    border-radius: 5px;
-}
-.contact-section-email input:focus {
-    outline: none;
-}
-.contact-section-email input:active {
-    outline: none;
-}
-.contact-section-email textarea {
-    width: 100%;
-    padding: 10px 10px;
-    border: solid 1px white;
-    color: white;
-    background-color: transparent;
-    border-radius: 5px;
-}
-.contact-section-email textarea:focus {
-    outline: none;
-}
-.contact-section-email textarea:active {
-    outline: none;
-}
-.contact-section-email button {
-    background-color: #fe908b;
-    border: none;
-    border-radius: 5px;
-    width: 130px;
-    height: 37px;
-    color: white;
-    font-family: 'Montserrat';
-}
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: white;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  color: white;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: white;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: white;
-}
-
 
 
 
@@ -284,7 +146,9 @@
     padding-top: 10px;
 }
 
-
+.points3 {
+    width: 50px !important;
+}
 
 
 
