--- a/css/shop.css
+++ b/css/shop.css
@@ -154,6 +154,164 @@
 .padding-middle {
   padding: 30px 0px;
 }
+
+
+
+
+
+/*
+**----Section 3----**
+*/
+.section3 {
+    padding: 70px 0px;
+    background-image: url('../img/section3-background.png');
+    background-repeat: no-repeat;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    background-size:cover;
+    background-position:center;
+}
+
+
+
+.shop-panel1 {
+  text-align: center;
+  padding: 0px 30px 0px 30px;
+}
+.shop-panel1 .panel-header {
+  background-color: #85d6df;
+  padding: 
+}
+.panel-header h1 {
+  font-family: 'GrandHotel-Regular';
+  color: white;
+  font-size: 45px;
+  padding-top: 15px;
+}
+.panel-header p {
+  color: white;
+  font-family: 'GOTHAM-LIGHT';
+  font-size: 12px;
+  padding: 15px 20px;
+  margin: 0px;
+}
+.panel-body {
+  background-color: white;
+  color: #344a5f;
+}
+.panel-body p {
+  font-family: 'GOTHAM-LIGHT';
+  font-size: 12px;
+  padding: 10px 20px;
+  margin: 0px;
+}
+.panel-footer1 {
+  background-color: #fe908b;
+  padding: 13px 20px 8px 20px; 
+}
+.panel-footer1 p {
+  color: white;
+  font-size: 12px;
+}
+
+
+
+
+
+
+/*
+**----Section 4----**
+*/
+
+.section4 {
+    padding: 70px 0px;
+    background-image: url('../img/section3-background.png');
+    background-repeat: no-repeat;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    background-size:cover;
+    background-position:center;
+    text-align: center;
+    color: white;
+}
+
+.section4 h1{
+  font-family: 'GrandHotel-Regular';
+  font-size: 45px;
+}
+.section4 p {
+  font-family: 'GOTHAM-LIGHT';
+  padding-bottom: 20px;
+}
+
+/*Inputs*/
+.input-s input{
+  background-color: transparent;
+  border-radius: 5px;
+  border-color: white;
+  width: 100%;
+  padding: 20px 15px;
+  margin: 5px;
+}
+.input-s input:active {
+  outline: none;
+}
+.input-s input:focus {
+  outline: none;
+}
+/*Data*/
+.datepicker {
+  cursor: pointer;
+  width: 200px;
+  text-align: center;
+}
+.input-d input {
+  background-color: #fe908b;
+  width: 100%;
+  border: none;
+  padding: 22px 15px;
+  margin: 5px;
+  border-radius: 5px;
+}
+.input-d input:hover {
+  cursor: pointer;
+}
+.select-package {
+  background-color: #fe908b;
+  width: 100%;
+  border: none;
+  padding: 22px 15px;
+  margin: 5px;
+  border-radius: 5px;
+}
+.select-package option {
+  background-color: white;
+  color: #344a5f;
+}
+.select-package:active {
+  outline: none;
+}
+.select-package:focus {
+  outline: none;
+}
+/*Select*/
+
+.input-e {
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+.input-e button {
+  background-color: #85d6df;
+  color: white;
+  font-family: 'GOTHAM-LIGHT';
+  border: none;
+  width: 160px;
+  height: 40px;
+  border-radius: 5px;
+}
 /*
 **----Footer----**
 */
@@ -193,4 +351,34 @@ footer i {
     footer .socialmedia-footer {
         text-align: center !important;
     }
+    .shop-panel1 {
+      text-align: center;
+      padding: 0px 0px 0px 30px;
+    }
+
+}
+
+
+
+/*
+****
+Placeholder Color
+****
+*/
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: white;
+  font-family: 'GOTHAM-LIGHT';
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+  font-family: 'GOTHAM-LIGHT';
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+  font-family: 'GOTHAM-LIGHT';
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: white;
+  font-family: 'GOTHAM-LIGHT';
 }
