--- a/css/shop.css
+++ b/css/shop.css
@@ -122,7 +122,7 @@
 */
 .section2 {
     padding: 70px 0px;
-    background-image: url('../img/section3-background.png');
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
@@ -164,7 +164,7 @@
 */
 .section3 {
     padding: 70px 0px;
-    background-image: url('../img/section3-background.png');
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
@@ -180,17 +180,17 @@
   padding: 0px 30px 0px 30px;
 }
 .shop-panel1 .panel-header {
-  background-color: #85d6df;
+  background-color: #f2f2f2; 
   padding: 
 }
 .panel-header h1 {
   font-family: 'GrandHotel-Regular';
-  color: white;
+  color: #85d6df;
   font-size: 45px;
   padding-top: 15px;
 }
 .panel-header p {
-  color: white;
+  color: #85d6df;
   font-family: 'GOTHAM-LIGHT';
   font-size: 12px;
   padding: 15px 20px;
@@ -226,7 +226,7 @@
 
 .section4 {
     padding: 70px 0px;
-    background-image: url('../img/section3-background.png');
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
@@ -250,7 +250,7 @@
 .input-s input{
   background-color: transparent;
   border-radius: 5px;
-  border-color: white;
+  border: solid 2px white;
   width: 100%;
   padding: 20px 15px;
   margin: 5px;
@@ -304,7 +304,7 @@
   padding-left: 20px;
 }
 .input-e button {
-  background-color: #85d6df;
+  background-color: #fe908b;
   color: white;
   font-family: 'GOTHAM-LIGHT';
   border: none;
