--- a/css/about.css
+++ b/css/about.css
@@ -114,7 +114,7 @@
 **----Testimonials Section----**
 */
 .testimonials-section1 {
-    background-color: #85d6df;
+    background-color: #f7f7f7;
     padding: 60px 0px;
 }
 .top-testimonials {
@@ -165,7 +165,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background-image: url('../img/section3-background.png');
+    background-color: #85d6df;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
