--- a/css/home.css
+++ b/css/home.css
@@ -140,7 +140,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background-image: url('../img/section3-background.png');
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
@@ -177,6 +177,9 @@
 /*
 **----Testimonials Section----**
 */
+.testimonials-section1 {
+    padding: 60px 0px;
+}
 .top-testimonials {
     text-align: center;
     margin-bottom: 20px;
@@ -221,26 +224,26 @@
 
 .contact-section {
     text-align: center;
-    background-color:#85d6df; 
+    background-color:#f7f7f7; 
     padding: 40px 0px;
 }
 
 .contact-section h1 {
     font-family: 'GrandHotel-Regular';
-    color: white;
+    color: #1c1d22;
     font-size: 50px;
 }
 
 .contact-section p {
     font-family: 'GOTHAM-LIGHT';
-    color: white;
+    color: #1c1d22;
 }
 
 .contact-section-email input {
     width: 100%;
     padding: 10px 10px;
-    border: solid 1px white;
-    color: white;
+    border: solid 1px #1c1d22;
+    color: #1c1d22;
     background-color: transparent;
     border-radius: 5px;
 }
@@ -253,8 +256,8 @@
 .contact-section-email textarea {
     width: 100%;
     padding: 10px 10px;
-    border: solid 1px white;
-    color: white;
+    border: solid 1px #1c1d22;
+    color: #1c1d22;
     background-color: transparent;
     border-radius: 5px;
 }
@@ -274,16 +277,16 @@
     font-family: 'Montserrat';
 }
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: white;
+  color: #1c1d22;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: white;
+  color: #1c1d22;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: white;
+  color: #1c1d22;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: white;
+  color: #1c1d22;
 }
 
 
@@ -298,7 +301,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background-image: url('../img/section3-background.png');
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
