--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background-image: url('../img/section3-background.png');
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
