--- a/css/shop.css
+++ b/css/shop.css
@@ -315,7 +315,7 @@
   padding-top: 20px;
   padding-left: 20px;
 }
-.input-e button {
+.input-e input {
   background-color: #fe908b;
   color: white;
   font-family: 'GOTHAM-LIGHT';
@@ -324,6 +324,7 @@
   height: 40px;
   border-radius: 5px;
 }
+
 /*
 **----Footer----**
 */
