--- a/css/about.css
+++ b/css/about.css
@@ -165,7 +165,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background-color: #85d6df;
+    background-color: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
