--- a/css/contacts.css
+++ b/css/contacts.css
@@ -171,7 +171,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
-    background: #85d6df;
+    background: #a5ceee;
     background-repeat: no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
